build: fix maitenance z-index, put navdots on the bottom

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -153,7 +153,7 @@ a {
 
 h1 {
 	font-size: 32pt;
-	margin: 5pt 0px;
+	margin: 5pt 0;
 }
 
 .p-24 {
@@ -162,6 +162,7 @@ h1 {
 
 .p-32 {
 	font-size: 16pt;
+	margin: 4pt 0;
 }
 
 .p-40 {
@@ -210,13 +211,14 @@ h1 {
 #maintenance {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 16pt;
     bottom: 0;
-    width: 90vh;
+
+    text-orientation: sideways-right;
+    writing-mode: vertical-rl;
     display: flex;
-    transform: rotate(-90deg);
+    transform: rotate(-180deg);
     align-items: flex-end;
-    padding-bottom: 50pt;
     z-index: 3;
     opacity: .4;
     justify-content: center;
@@ -225,7 +227,7 @@ h1 {
 
 @media screen and (max-width:780px ) {
 	.row {
-		flex-direction: column;
+		flex-direction: column-reverse;
 	}
 	.col-6, .col-1, .col-5 {
 		width:100%;
@@ -239,7 +241,7 @@ h1 {
         height: 74pt;
 	}
 	#maintenance {
-	    padding-bottom: 28pt;
+	    right: 8pt;
 	}
 }
 
